pnp: ctrl+shift+. for running commands inline, re-added perline to replace command, changed how textarea changes size, new helper function moveCursorTo. globalclocks: fullscreen support, wakelock support, tab title now correct, alerts when copies to clipboard again

--- a/things/globalclocks/style.css
+++ b/things/globalclocks/style.css
@@ -63,3 +63,21 @@ button {
 .fixed a:hover {
     color: #fff;
 }
+#timeSince {
+    cursor: zoom-in;
+}
+#extraLong {
+    cursor: none;
+}
+
+body[data-embed="yes"] {
+    h1 {
+        font-size: 10vw;
+    }
+    h2,p {
+        font-size: 3vw;
+    }
+    #fixed {
+        display: block;
+    }
+}
